2021-07-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.2

	* docs-src/: Updated for release 0.2.2
	* docs/: Idem

2021-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/replacements/hello2.R: Add function argument documentation

2021-04-07  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-04-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugRreports): Added to DESCRIPTION file

2021-02-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.1

	* docs-src/: Updated for release 0.2.1
	* docs/: Idem

2021-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Also suggest roxygen2

	* inst/replacements/hello2.R: Update example to hello2

2020-12-29  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Renamed from R-CMD-check.yaml and updated
	* README.md: Updated badge

2020-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/pkgKitten.R (kitten): Call setup_tinytest() instead of puppy

2020-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pkgKitten.R (kitten): Support new option 'bunny' to use roxygen2
	* man/kitten.Rd: Documentation
	* inst/replacements/hello2.R: Dummy file with roxygen docs

2020-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.0

2020-09-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pkgKitten.R (kitten): Run tinytest::puppy unless opted out
	* man/kitten.Rd: Document new option 'puppy'
	* DESCRIPTION (Suggests): New suggested on 'tinytest'

	* R/pkgKitten.R (kitten): Copy-in replacement NAMESPACE
	* inst/replacements/NAMESPACE: Replacement NAMESPACE

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* README.md: Added badge and short sentence linking to documentation

2020-09-25  Dirk Eddelbuettel  <edd@debian.org>
